Atualizar o index.astro

--- a/src/pages/dashboard/index.astro
+++ b/src/pages/dashboard/index.astro
@@ -17,6 +17,6 @@ import DashboardGeralIsland from "../../components/islands/DashboardGeralIsland.
       margin: 0 auto;
     "
   >
-    <DashboardGeralIsland client:load />
+    <DashboardGeralIsland client:visible />
   </section>
 </DashboardLayout>
