--- a/src/pages/dashboard/admin.astro
+++ b/src/pages/dashboard/admin.astro
@@ -14,6 +14,6 @@ import DashboardAdminIsland from "../../components/islands/DashboardAdminIsland.
       margin: 0 auto;
     "
   >
-    <DashboardAdminIsland client:load />
+    <DashboardAdminIsland client:visible />
   </section>
 </DashboardLayout>
