Atualizar o gestor.astro

--- a/src/pages/dashboard/gestor.astro
+++ b/src/pages/dashboard/gestor.astro
@@ -18,6 +18,6 @@ import DashboardGestorIsland from "../../components/islands/DashboardGestorIslan
       margin: 0 auto;
     "
   >
-    <DashboardGestorIsland client:load />
+    <DashboardGestorIsland client:visible />
   </section>
 </DashboardLayout>
