Atualizar o permissoes.astro

--- a/src/pages/dashboard/permissoes.astro
+++ b/src/pages/dashboard/permissoes.astro
@@ -12,6 +12,6 @@ import PermissoesAdminIsland from "../../components/islands/PermissoesAdminIslan
       margin: 0 auto;
     "
   >
-    <PermissoesAdminIsland client:load />
+    <PermissoesAdminIsland client:visible />
   </section>
 </DashboardLayout>
