--- a/src/pages/dashboard/index.astro
+++ b/src/pages/dashboard/index.astro
@@ -9,14 +9,7 @@ import DashboardGeralIsland from "../../components/islands/DashboardGeralIsland.
 -->
 
 <DashboardLayout title="Dashboard Geral">
-  <section
-    style="
-      padding: 16px;
-      width: 100%;
-      max-width: 1300px;
-      margin: 0 auto;
-    "
-  >
+  <div class="page-content-wrap">
     <DashboardGeralIsland client:visible />
-  </section>
+  </div>
 </DashboardLayout>
