--- a/src/pages/dashboard/permissoes.astro
+++ b/src/pages/dashboard/permissoes.astro
@@ -4,14 +4,7 @@ import PermissoesAdminIsland from "../../components/islands/PermissoesAdminIslan
 ---
 
 <DashboardLayout title="Permissões do Sistema">
-  <section
-    style="
-      padding: 16px;
-      width: 100%;
-      max-width: 1200px;
-      margin: 0 auto;
-    "
-  >
+  <div class="page-content-wrap">
     <PermissoesAdminIsland client:visible />
-  </section>
+  </div>
 </DashboardLayout>
