--- a/src/pages/orcamentos/index.astro
+++ b/src/pages/orcamentos/index.astro
@@ -1,21 +1,3 @@
 ---
-import "../../styles/global.css";
-import DashboardLayout from "../../layouts/DashboardLayout.astro";
-import OrcamentosCadastroIsland from "../../components/islands/OrcamentosCadastroIsland.tsx";
-import OrcamentosConsultaIsland from "../../components/islands/OrcamentosConsultaIsland.tsx";
-import OrcamentosPermissionLoader from "../../components/islands/OrcamentosPermissionLoader.tsx";
-
-const activePage = "orcamentos";
+return Astro.redirect("/orcamentos/importar");
 ---
-
-<DashboardLayout title="Orçamentos" {activePage}>
-  <h1 class="page-title">Orçamentos / CRM</h1>
-  <p class="page-subtitle">
-    Cadastre e acompanhe orçamentos antes de virarem vendas.
-  </p>
-
-  <OrcamentosPermissionLoader client:load>
-    <OrcamentosCadastroIsland client:load suppressLoadingMessage />
-    <OrcamentosConsultaIsland client:load suppressLoadingMessage />
-  </OrcamentosPermissionLoader>
-</DashboardLayout>
